# Toml-Generator-for-PyMoDaq-Applications

./: README.md  keithleyDataClass.py  pyproject.toml  tolmGeneratorGUI.py  tomlGeneratorKeithley.py  utilities.py
src/tgpa/: __about__.py  keithleyDataClass.py  tomlGeneratorGUI.py  tomlGeneratorKeithley.py  utilities.py
